--- a/Report/appendix.lyx
+++ b/Report/appendix.lyx
@@ -109,336 +109,6 @@ name "sec:Appendix"
 \end_layout
 
 \begin_layout Standard
-Final Spice Netlist:
-\end_layout
-
-\begin_layout Standard
-\begin_inset listings
-lstparams "backgroundcolor={\color{white}},basicstyle={\normalsize\ttfamily},breaklines=true,frame=tblr"
-inline false
-status open
-
-\begin_layout Plain Layout
-
-* Design Problem, ee114/214A- 2012 
-\end_layout
-
-\begin_layout Plain Layout
-
-* Please fill in the specification achieved by your circuit  
-\end_layout
-
-\begin_layout Plain Layout
-
-* before your submit the netlist.
- 
-\end_layout
-
-\begin_layout Plain Layout
-
-************************************************************** 
-\end_layout
-
-\begin_layout Plain Layout
-
-* The specifications that this script achieves are: 
-\end_layout
-
-\begin_layout Plain Layout
-
-* sunetid = rohitpid, samfok * Power  = 2.4242 mW   
-\end_layout
-
-\begin_layout Plain Layout
-
-* Gain   = 20.631 K  * BandWidth = 90.965  MHz 
-\end_layout
-
-\begin_layout Plain Layout
-
-***************************************************************
-\end_layout
-
-\begin_layout Plain Layout
-
-** Including the model file .include /usr/class/ee114/hspice/ee114_hspice.sp
-\end_layout
-
-\begin_layout Plain Layout
-
-* Defining Top level circuit parameters 
-\end_layout
-
-\begin_layout Plain Layout
-
-.param Cin = 100f .param CL  = 500f 
-\end_layout
-
-\begin_layout Plain Layout
-
-.param RL  = 10K
-\end_layout
-
-\begin_layout Plain Layout
-
-* defining the supply voltages
-\end_layout
-
-\begin_layout Plain Layout
-
-vdd vdd 0 2.5 vss vss 0 -2.5
-\end_layout
-
-\begin_layout Plain Layout
-
-* Defining the input current source
-\end_layout
-
-\begin_layout Plain Layout
-
-** For ac simulation uncomment the following 2 lines
-\end_layout
-
-\begin_layout Plain Layout
-
-**  Iina		iina	vdd	ac	0.5	  Iinb		vdd	iinb	ac	0.5	
-\end_layout
-
-\begin_layout Plain Layout
-
-** For transient simulation uncomment the following 2 lines** 
-\end_layout
-
-\begin_layout Plain Layout
-
-*Iina		iina	vdd	sin(0 0.5u 1e6) *Iinb		vdd	iinb	sin(0 0.5u 1e6)
-\end_layout
-
-\begin_layout Plain Layout
-
-* Defining Input capacitance
-\end_layout
-
-\begin_layout Plain Layout
-
-Cina	vdd	iina 'Cin' Cinb	vdd	iinb 'Cin'
-\end_layout
-
-\begin_layout Plain Layout
-
-* Defining the differential load 
-\end_layout
-
-\begin_layout Plain Layout
-
-RL	vouta		voutb		'RL' CL	vouta		voutb		'CL'
-\end_layout
-
-\begin_layout Plain Layout
-
-*** Your Trans-impedance Amplifier here 
-\end_layout
-
-\begin_layout Plain Layout
-
-*** **nmos*** *name drain gate source bulk type parameters* 
-\end_layout
-
-\begin_layout Plain Layout
-
-M1a  node_1a 0 iina vss nmos114 w=12.8u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-M1b  node_1b 0 iinb vss nmos114 w=12.8u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-M2a  node_2a node_1a ibias2 vss nmos114 w=14.3u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-M2b  node_2b node_1b ibias2 vss nmos114 w=14.3u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-M3a  vdd node_2a vouta vss nmos114 w=65.8u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-M3b  vdd node_2b voutb vss nmos114 w=65.8u l=1u
-\end_layout
-
-\begin_layout Plain Layout
-
-**pmos*** *name drain gate source bulk type parameters* 
-\end_layout
-
-\begin_layout Plain Layout
-
-ML1a node_1a node_1a vdd vdd pmos114 w=3.8u l=1u  
-\end_layout
-
-\begin_layout Plain Layout
-
-ML1b node_1b node_1b vdd vdd pmos114 w=3.8u l=1u  
-\end_layout
-
-\begin_layout Plain Layout
-
-ML2a node_2a node_2a vdd vdd pmos114 w=4.4u l=1u  
-\end_layout
-
-\begin_layout Plain Layout
-
-ML2b node_2b node_2b vdd vdd pmos114 w=4.4u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-*** Your Bias Circuitry here *** **nmos*** *name drain gate source bulk
- type parameters* 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias1a iina nbias vss vss nmos114 w=2.2u l=2u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias1b iinb nbias vss vss nmos114 w=2.2u l=2u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias2a ibias2 nbias vss vss nmos114 w=2.5u l=2u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias2b ibias2 nbias vss vss nmos114 w=2.5u l=2u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias3a vouta nbias vss vss nmos114 w=10.2u l=2u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mbias3b voutb nbias vss vss nmos114 w=10.2u l=2u
-\end_layout
-
-\begin_layout Plain Layout
-
-** for students enrolled in ee114, you can use the given ideal voltage source
- 
-\end_layout
-
-\begin_layout Plain Layout
-
-*Vbias_n nbias vss 1.5   *replace --- by your value
-\end_layout
-
-\begin_layout Plain Layout
-
-*** drain gate source bulk mostype w_value l_value 
-\end_layout
-
-\begin_layout Plain Layout
-
-*M1 vb vb vdd vdd pmos114 w=2u l=20u
-\end_layout
-
-\begin_layout Plain Layout
-
-*** nmos *** drain gate source bulk mostype w_value l_value 
-\end_layout
-
-\begin_layout Plain Layout
-
-Mu nbias nbias vx vss nmos114 w=16u l=1u 
-\end_layout
-
-\begin_layout Plain Layout
-
-Ml vx nbias vss vss nmos114 w=2u l=1u
-\end_layout
-
-\begin_layout Plain Layout
-
-*Resistors R vdd nbias 78.75k
-\end_layout
-
-\begin_layout Plain Layout
-
-** For students enrolled in ee214A, you need to design your bias ciruit.
- You cannpt use Vbias_n as ideal voltage source.
-\end_layout
-
-\begin_layout Plain Layout
-
-* defining the analysis
-\end_layout
-
-\begin_layout Plain Layout
-
-.op .option post brief nomod
-\end_layout
-
-\begin_layout Plain Layout
-
-** For ac simulation uncomment the following line**  
-\end_layout
-
-\begin_layout Plain Layout
-
-.ac dec 100 100 10g .measure ac gainmax max vdb(vouta) 
-\end_layout
-
-\begin_layout Plain Layout
-
-.measure ac f3db when vdb(vouta)='gainmax-3'
-\end_layout
-
-\begin_layout Plain Layout
-
-** For transient simulation uncomment the following line ** 
-\end_layout
-
-\begin_layout Plain Layout
-
-*.tran 0.01u 4u 
-\end_layout
-
-\begin_layout Plain Layout
-
-.end 
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-.op output:
-\end_layout
-
-\begin_layout Standard
 \noindent
 We consider four capcitances for each MOSFET: 
 \begin_inset Formula $C_{gs}$
@@ -1325,6 +995,31 @@ and
  & = & \frac{1}{1.2}\frac{1}{g_{m3}}C_{out}+\frac{1.33}{1.2}\frac{C_{gs3}}{g_{m3}}\\
 \tau_{4} & = & \frac{1}{1.2}\frac{V_{OV3}}{I_{D3}}C_{out}+\frac{1.33}{1.2}\frac{2}{3}\frac{L_{3}^{2}}{\mu_{n}V_{OV3}}
 \end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+Final Spice Netlist:
+\end_layout
+
+\begin_layout Standard
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+.op output:
+\end_layout
+
+\begin_layout Standard
+\begin_inset External
+	template PDFPages
+	filename output_lis.pdf
+	extra LaTeX "pages=-"
 
 \end_inset
 
